@@ -12,8 +12,11 @@ namespace NHibernate.Envers.Configuration.Attributes
 	/// </summary>
 	public class AttributeConfiguration : IMetaDataProvider
 	{
+		private IList<System.Type> filledTypes; 
+
 		public IDictionary<System.Type, IEntityMeta> CreateMetaData(Cfg.Configuration nhConfiguration)
 		{
+			filledTypes = new List<System.Type>();
 			var ret = new Dictionary<System.Type, IEntityMeta>();
 			foreach (var persistentClass in nhConfiguration.ClassMappings)
 			{
@@ -67,13 +70,19 @@ namespace NHibernate.Envers.Configuration.Attributes
 
 		private void fillClass(System.Type type, IDictionary<System.Type, IEntityMeta> dicToFill)
 		{
-			foreach (Attribute attr in type.GetCustomAttributes(false))
+			if (!filledTypes.Contains(type))
 			{
-				if (!dicToFill.ContainsKey(type))
-					dicToFill[type] = new EntityMeta();
-				var classAttributeToAdd = ClassAttribute(attr, type);
-				((EntityMeta)dicToFill[type]).AddClassMeta(classAttributeToAdd);
+				foreach (Attribute attr in type.GetCustomAttributes(false))
+				{
+					if (!dicToFill.ContainsKey(type))
+						dicToFill[type] = new EntityMeta();
+					var classAttributeToAdd = ClassAttribute(attr, type);
+					((EntityMeta)dicToFill[type]).AddClassMeta(classAttributeToAdd);
+				}	
 			}
+			var baseType = type.BaseType;
+			if(!type.IsInterface && !baseType.Equals(typeof(object)))
+				fillClass(baseType, dicToFill);
 		}
 
 		protected virtual Attribute ClassAttribute(Attribute attribute, System.Type type)
