@@ -7,6 +7,9 @@
 *** Possible breaking change ***
 * AbstractCollectionMapper.Ctor changed
 * FluentConfiguration.Exclude/ExcludeRelationData now throws FluentException and not ArgumentException if property/field cannot be found.
+* (Fluent) Using a non mapped type as revision entity now throws FluentException and not MappedException
+* IFluentRevision.Attributes now takes a Configuration object as inparameter
+* IMetaDataStore.EntitiesDeclaredWith<T> removed
 
 
 === 1.0 GA (v 1.0.0.0), 2011-10-14, NH 3.2 GA ===
